--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
 		<configuration>
 			<url>http://localhost:8081/manager/text</url>
 			<server>mytomcat</server>
+			<username>admin</username>
+			<password>admin</password>
 			<path>/cacheImplement</path>
 		</configuration>
 	  </plugin>
